mpegpsdemux: remove unused field

https://bugzilla.gnome.org/show_bug.cgi?id=659485